work on routing/components

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,1 +1,10 @@
-<p>client works!</p>
+<div class="container-fluid">
+    <p>client works!</p>
+    <div class="col-2">
+        Category ID: {{ category$ }}
+    </div>
+    <div class="col-2">
+        Achievement ID: {{ achievement$ }}
+    </div>
+
+</div>
