--- a/src/app/no-data/no-data.component.html
+++ b/src/app/no-data/no-data.component.html
@@ -1,1 +1,8 @@
-<p>no-data works!</p>
+<div class="container-fluid p-0">
+    <div class="row">
+        <app-topbar />
+    </div>
+    <div class="text-center row">
+        <h3>No Everquest Achievement files loaded!</h3>
+    </div>
+</div>
