--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,13 @@
-<p>main works!</p>
+<div class="container-fluid p-0">
+    <div class="row">
+        <app-topbar />
+    </div>
+    <div class="row">
+        <div class="col-2">
+            <app-menu />
+        </div>
+        <div class="col-10">
+            <router-outlet />
+        </div>
+    </div>
+</div>
