--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,11 +9,14 @@
                 <div ngbAccordionCollapse class="">
                     <div ngbAccordionBody class="">
                         <ng-template>
-                            <ul class="list-group">
-                                @for (cat of item.children ; track cat) {
-                                <li class="list-group-item"><a [routerLink]="cat.routerLink" [skipLocationChange]="true" routerLinkActive="active">{{ cat.name }}</a></li>
-                                }
-                            </ul>
+                        <ul class="list-unstyled">
+                        @for (cat of item.children ; track cat) {
+                        <li class="list-group-item">
+                            <button type="button" class="list-group-item list-group-item-action btn btn-custom text-secondary"
+                             [routerLink]="cat.routerLink" [skipLocationChange]="true" routerLinkActive="active">{{ cat.name }}</button>
+                        </li>
+                        }
+                        </ul>
                         </ng-template>
                     </div>
                 </div>
