--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid pe-10">
     <div class="col-2">
         Category ID: {{ category$ }}
     </div>
@@ -6,10 +6,10 @@
         Achievement ID: {{ achievement$ }}
     </div>
     <div class="col-2">
-        Achievement ID: {{ hasFilesLoaded() }}
+        hasFilesLoaded(): {{ hasFilesLoaded() }}
     </div>
-
-    <table class="table table-striped table-hover table-fixed w-100 table-primary">
+    <div></div>
+    <table class="table table-striped table-hover table-fixed table-primary">
         <thead>
             <tr>
                 <th class="">Achievement</th>
