client component display work

--- a/src/app/client/client.component.sass
+++ b/src/app/client/client.component.sass
@@ -4,6 +4,8 @@
   max-width: 2rem
 
   div
-   transform: translate(0px, -25px) rotate(-75deg)
+    rotate: -75deg
+    transform-origin: left center
+    translate: 1rem
 
 
