--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -15,7 +15,7 @@
                 <th class="">Achievement</th>
                 <th class="">Missing</th>
                 @for (c of characters; track c.name) {
-                <th class="rotate position-relative">
+                <th class="rotate position-relative border-start border-end">
                     <div class="position-absolute bottom-0 start-0">
                         <span class="px-10 py-0">{{ c.name }}</span>
                     </div>
@@ -27,7 +27,7 @@
         <tbody class="table-group-divider tbody-bordered">
         @for (row of data; track $index) {
         <tr>
-            <td>{{ row.name }}</td>
+            <td>{{ row.name }} ({{ row.points }} Points)</td>
             <td>{{ row.missing }}</td>
             @for (v of row.data; track $index) {
                 <td>{{ v }}</td>
