--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid pe-10">
+<div class="container-fluid pe-10 h-90 hmax-90">
+    <div class="row">
     <div class="col-2">
         Category ID: {{ category$ }}
     </div>
@@ -8,33 +9,35 @@
     <div class="col-2">
         hasFilesLoaded(): {{ hasFilesLoaded() }}
     </div>
-    <div></div>
-    <table class="table table-striped table-hover table-fixed table-primary">
-        <thead>
-            <tr>
-                <th class="">Achievement</th>
-                <th class="">Missing</th>
-                @for (c of characters; track c.name) {
-                <th class="rotate position-relative border-start border-end">
-                    <div class="position-absolute bottom-0 start-0">
-                        <span class="px-10 py-0">{{ c.name }}</span>
-                    </div>
-                </th>
+    </div>
+    <div class="h-90">
+        <table class="table table-striped table-hover table-fixed table-primary overflow-y-auto">
+            <thead>
+                <tr>
+                    <th class="">Achievement</th>
+                    <th class="">Missing</th>
+                    @for (c of characters; track c.name) {
+                    <th class="rotate position-relative border-start border-end">
+                        <div class="position-absolute bottom-0 start-0">
+                            <span class="px-10 py-0">{{ c.name }}</span>
+                        </div>
+                    </th>
+                    }
+                    <th class="">Completed</th>
+                </tr>
+            </thead>
+            <tbody class="table-group-divider tbody-bordered">
+                @for (row of data; track $index) {
+                <tr>
+                    <td>{{ row.name }} ({{ row.points }} Points)</td>
+                    <td>{{ row.missing }}</td>
+                    @for (v of row.data; track $index) {
+                    <td>{{ v }}</td>
+                    }
+                    <td>{{ row.completed }}</td>
+                </tr>
                 }
-                <th class="">Completed</th>
-            </tr>
-        </thead>
-        <tbody class="table-group-divider tbody-bordered">
-        @for (row of data; track $index) {
-        <tr>
-            <td>{{ row.name }} ({{ row.points }} Points)</td>
-            <td>{{ row.missing }}</td>
-            @for (v of row.data; track $index) {
-                <td>{{ v }}</td>
-            }
-            <td>{{ row.completed }}</td>
-        </tr>
-        }
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
