--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 section">
     <div class="row">
         <app-topbar />
     </div>
-    <div class="row">
-        <div class="col-2">
+    <div class="row custom-content">
+        <div class="col-2 section">
             <app-menu />
         </div>
-        <div class="col-10">
+        <div class="col-10 section">
             <router-outlet />
         </div>
     </div>
