--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,8 @@
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap'
 
+body
+  height: 98vh
+  max-height: 98vh
+  width: calc(100vw)
+  max-width: calc(100vw)
