scoll bars on menu and table panes

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid p-0 section">
-    <div class="row">
+<div class="row g-0">
+    <div class="">
         <app-topbar />
     </div>
-    <div class="row custom-content">
-        <div class="col-2 section">
+    <div class="row">
+        <div class="col-2 section g-0">
             <app-menu />
         </div>
-        <div class="col-10 section">
+        <div class="col-10 section g-0">
             <router-outlet />
         </div>
     </div>
