--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
-<aside class="h-100">
-    <div class="h-90">
+<aside class="vh-90">
+    <div class="h-100 hmax-90">
         <div ngbAccordion #accordion="ngbAccordion" class="custom-aside overflow-y-auto">
             @for (item of menu; track item) {
             <div ngbAccordionItem="menu{{ item.id }}">
