--- a/src/app/no-data/no-data.component.html
+++ b/src/app/no-data/no-data.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid p-0">
-    <div class="row mx-0">
-        <app-topbar class="px-0"/>
+<div class="">
+    <div class="row g-0">
+        <app-topbar class=""/>
     </div>
-    <div class="text-center row mx-0">
+    <div class="text-center row g-0">
         <h3>No Everquest Achievement files loaded!</h3>
     </div>
 </div>
