--- a/src/app/client/client.component.sass
+++ b/src/app/client/client.component.sass
@@ -8,4 +8,13 @@
     transform-origin: left center
     translate: 1rem
 
+.client-title
+  height: 2rem
 
+.client-table
+  height: calc(100vh - 2 * 2rem)
+  max-height: calc(100vh - 2 * 2rem)
+
+.tr-custom
+  height: 2rem !important
+  max-height: 2rem !important
