--- a/src/app/main/main.component.sass
+++ b/src/app/main/main.component.sass
@@ -6,14 +6,6 @@
   height: 100%
   max-height: 100%
 
-.h-70
-  height: 70%
-
-.h-80
-  height: 80%
-
-.h-90
-  height: 90%
-
-.hmax-90
-  max-height: calc(100vh - 2rem)
+.vh-90
+  height: calc(100vh * .89)
+  max-heigth: calc(100vh * .89)
