--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,11 +2,11 @@
     <div class="">
         <app-topbar />
     </div>
-    <div class="row">
-        <div class="col-2 section g-0">
+    <div class="row vh-90">
+        <div class="col-2 g-0">
             <app-menu />
         </div>
-        <div class="col-10 section g-0">
+        <div class="col-10 g-0">
             <router-outlet />
         </div>
     </div>
