--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,3 +8,11 @@ body
   max-height: 98vh
   width: calc(100vw)
   max-width: calc(100vw)
+
+.section
+  height: calc(100vh - 4rem)
+  max-height: calc(100vh - 4rem)
+
+.vh-90
+  height: calc(100vh * .89)
+  max-heigth: calc(100vh * .89)
