--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,4 +1,4 @@
-<div class="h-100 container-fluid col">
+<div class="container-fluid col" scope="col">
     <div class="row client-title">
         <div class="col-6">
             Category ID: {{ category$ }}
@@ -8,8 +8,8 @@
         </div>
     </div>
     <div class="row h-100 overflow-y-auto">
-        <table class="table table-striped table-hover table-fixed table-dark">
-            <thead>
+        <table class="table table-striped table-hover table-fixed table-dark client-table">
+            <thead class="table-header" scope="col">
                 <tr>
                     <th class="col-5">Achievement</th>
                     <th class="col-1">Missing</th>
