--- a/src/app/client/client.component.sass
+++ b/src/app/client/client.component.sass
@@ -8,17 +8,10 @@
     transform-origin: left center
     translate: 1rem
 
-.client-title
-  height: 2rem
-
-.client-table
-  height: calc(100vh - 2 * 2rem)
-  max-height: calc(100vh - 2 * 2rem)
-
-.tr-custom
-  height: 2rem !important
-  max-height: 2rem !important
-
 .table-header
   position: sticky
   top: 0
+
+.custom-max
+  height: calc(100vh - 4rem)
+  max-height: calc(100vh - 4rem)
