--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,12 @@
-<div class="row g-0">
+<div class="g-0">
     <div class="">
         <app-topbar />
     </div>
     <div class="row vh-90">
-        <div class="col-2 g-0">
+        <div class="col-2">
             <app-menu />
         </div>
-        <div class="col-10 g-0">
+        <div class="col-10">
             <router-outlet />
         </div>
     </div>
