colors of complete/incomplete

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,6 +1,6 @@
 <div class="custom-max">
-    <div class="h-100 overflow-y-auto overflow-x-hidden">
-        <table class="table table-striped table-hover table-fixed table-dark caption-top">
+    <div class="h-100 overflow-y-scroll overflow-x-hidden">
+        <table class="table table-fixed table-dark caption-top">
             <caption>
                 <div class="row">
                 <div class="col-6">
@@ -31,7 +31,8 @@
                     <td>{{ row.name }} ({{ row.points }} Points)</td>
                     <td class="text-center">{{ row.missing | number }}</td>
                     @for (v of row.data; track $index) {
-                    <td class="text-center border-start border-end">{{ v }}</td>
+                    <td class="text-center border-start border-end"
+                     [ngClass]="{'text-bg-success': v === 'C', 'text-bg-info': v !== 'C'}">{{ v }}</td>
                     }
                     <td class="text-center">{{ row.completed | number }}</td>
                 </tr>
