heroic AA page needs overflow-x-auto

--- a/src/app/heroic/heroic.component.sass
+++ b/src/app/heroic/heroic.component.sass
@@ -1,3 +1,14 @@
+.rotate
+  height: 100px
+  white-space: nowrap
+  max-width: 3rem
+  width: 3rem
+
+  div
+    rotate: -75deg
+    transform-origin: left center
+    translate: 1rem
+
 .table-header
   position: sticky
   top: 0
