--- a/src/app/heroic/heroic.component.html
+++ b/src/app/heroic/heroic.component.html
@@ -1,5 +1,5 @@
 <div class="custom-max">
-    <div class="h-100 overflow-y-scroll overflow-x-hidden">
+    <div class="h-100 overflow-y-scroll overflow-x-auto">
         <table class="table table-fixed table-dark">
             <thead class="table-header" scope="col">
                 <tr>
