--- a/src/app/heroic/heroic.component.html
+++ b/src/app/heroic/heroic.component.html
@@ -1,6 +1,6 @@
 <div class="custom-max">
     <div class="h-100 overflow-y-scroll overflow-x-auto">
-        <table class="table table-fixed table-dark">
+        <table class="table-sm table-fixed table-dark">
             <thead class="table-header" scope="col">
                 <tr>
                     <th class="col-5" rowspan="2">Achievement</th>
@@ -27,26 +27,27 @@
                     <td class="text-nowrap p-0">{{ row.name }}</td>
                     @for (v of row.data; track $index) {
                     <td class="border-start border-end p-0">
-                        <div class="text-center" [ngClass]="{'text-bg-success': v === 'C', 'text-bg-warning': v === 'I', 'text-bg-dark': v === ''}">
-                        {{ v }}
-                    </div>
+                        <div class="text-center"
+                            [ngClass]="{'text-bg-success': v === 'C', 'text-bg-warning': v === 'I', 'text-bg-dark': v === ''}">
+                            {{ v }}
+                        </div>
                     </td>
                     }
                 </tr>
                 }
                 @else {
-                    <tr class="">
-                        <td class="p-0">{{ row.name }}</td>
-                        @for (v of row.data; track $index) {
-                        <td class="border-start border-end p-0">
-                            <div class="text-center" [ngClass]="{'text-bg-success': v == num_heroic_AAs[$index % 3],'text-bg-warning': v != num_heroic_AAs[$index % 3]}"
-                              placement="top" ngbTooltip="{{ v }}/{{ num_heroic_AAs[$index % 3] }}"
-                            >
+                <tr class="">
+                    <td class="p-0">{{ row.name }}</td>
+                    @for (v of row.data; track $index) {
+                    <td class="border-start border-end p-0">
+                        <div class="text-center"
+                            [ngClass]="{'text-bg-success': v == num_heroic_AAs[$index % 3],'text-bg-warning': v != num_heroic_AAs[$index % 3]}"
+                            placement="top" ngbTooltip="{{ v }}/{{ num_heroic_AAs[$index % 3] }}">
                             {{ v }}
-                            </div>
-                        </td>
-                        }
-                    </tr>
+                        </div>
+                    </td>
+                    }
+                </tr>
                 }
                 }
             </tbody>
