fix sticky header for heroic AAs component

--- a/src/app/heroic/heroic.component.html
+++ b/src/app/heroic/heroic.component.html
@@ -1,6 +1,6 @@
 <div class="custom-max">
     <div class="h-100 overflow-y-scroll overflow-x-auto">
-        <table class="table-sm table-fixed table-dark">
+        <table class="table table-sm table-fixed table-dark">
             <thead class="table-header" scope="col">
                 <tr>
                     <th class="col-5" rowspan="2">Achievement</th>
