--- a/src/styles.sass
+++ b/src/styles.sass
@@ -16,3 +16,10 @@ body
 .vh-90
   height: calc(100vh * .89)
   max-height: calc(100vh * .89)
+
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom:active,
+.btn-custom.active,
+.btn-custom.dropdown-toggle.show
+  color: rgb(255, 217.8, 106.2) !important
