--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -2,10 +2,22 @@
     <div class="h-100 overflow-y-scroll overflow-x-hidden">
         <table class="table table-sm table-bordered table-fixed table-dark caption-top">
             <caption class="p-0">
-                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="navbar p-0">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">{{ getCategoryName(category$)?.name }}</li>
                         <li class="breadcrumb-item">{{ getCategoryName(achievement$)?.name }}</li>
+                    </ol>
+                    <ol class="m-0">
+                        <li class="navbar">
+                            <button class="btn btn-outline-primary text-nowrap" (click)="toggleCompleted()">
+                                @if (showCompleted()) {
+                                Filter Completed
+                                }
+                                @else {
+                                Show Completed
+                                }
+                            </button>
+                        </li>
                     </ol>
                 </nav>
             </caption>
@@ -25,7 +37,7 @@
             </thead>
             <tbody class="table-group-divider tbody-bordered">
                 @for (row of data; track $index) {
-                <tr class="">
+                <tr class="" [hidden]="row.completed == characters.size && !showCompleted()">
                     <td>
                         @if (row.components > 1) {
                         <button type="button" class="btn btn-custom py-0 ps-1"
@@ -34,7 +46,7 @@
                         </button>
                         }
                         @else {
-                            {{ row.name }}
+                        {{ row.name }}
                         }
                         ({{ row.points }} Points)
                     </td>
