class/css work to make the table header not see through

--- a/src/app/client/client.component.sass
+++ b/src/app/client/client.component.sass
@@ -9,10 +9,16 @@
     transform-origin: left center
     translate: 1rem
 
+.table-custom
+  border-collapse: separate
+  border-spacing: 0
+
 .table-header
   position: sticky
   top: 0
   z-index: 1
+  th
+    box-shadow: inset 1px -1px 0px 0px white
 
 .custom-max
   height: calc(100vh - 4rem)
