--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,32 +1,34 @@
 <div class="custom-max">
     <div class="h-100 overflow-y-scroll overflow-x-hidden">
-        <table class="table table-sm table-bordered table-fixed table-dark caption-top">
-            <caption class="p-0">
-                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="navbar p-0">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">{{ getCategoryName(category$)?.name }}</li>
-                        <li class="breadcrumb-item">{{ getCategoryName(achievement$)?.name }}</li>
-                    </ol>
-                    <ol class="m-0">
-                        <li class="navbar">
-                            <button class="btn btn-outline-primary text-nowrap" (click)="toggleCompleted()">
-                                @if (showCompleted()) {
-                                Filter Completed
-                                }
-                                @else {
-                                Show Completed
-                                }
-                            </button>
-                        </li>
-                    </ol>
-                </nav>
-            </caption>
+        <table class="table table-sm table-bordered table-fixed table-dark">
             <thead class="table-header" scope="col">
+                <tr class="">
+                    <td [colSpan]="3 + characters.size">
+                        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="navbar p-0">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item">{{ getCategoryName(category$)?.name }}</li>
+                                <li class="breadcrumb-item">{{ getCategoryName(achievement$)?.name }}</li>
+                            </ol>
+                            <ol class="m-0">
+                                <li class="navbar">
+                                    <button class="btn btn-outline-primary text-nowrap" (click)="toggleCompleted()">
+                                        @if (showCompleted()) {
+                                        Filter Completed
+                                        }
+                                        @else {
+                                        Show Completed
+                                        }
+                                    </button>
+                                </li>
+                            </ol>
+                        </nav>
+                    </td>
+                </tr>
                 <tr>
                     <th class="col-5">Achievement</th>
                     <th class="col-1 text-center">Missing</th>
                     @for (c of characters; track c.name) {
-                    <th class="rotate position-relative border-start border-end">
+                    <th class="rotate position-relative">
                         <div class="position-absolute bottom-0 start-0">
                             <span class="">{{ c.name }}</span>
                         </div>
@@ -52,7 +54,7 @@
                     </td>
                     <td class="text-center">{{ row.missing | number }}</td>
                     @for (v of row.data; track $index) {
-                    <td class="text-center border-start border-end p-0">
+                    <td class="text-center p-0">
                         <div class="text-center py-2"
                             [ngClass]="{'text-bg-success': v === 'C', 'text-bg-warning': v !== 'C' && v !== '', 'text-bg-dark': v === ''}">
                             {{ v }}
