--- a/src/app/heroic/heroic.component.sass
+++ b/src/app/heroic/heroic.component.sass
@@ -12,6 +12,9 @@
 .table-header
   position: sticky
   top: 0
+  z-index: 1
+  th
+    box-shadow: inset 1px -1px 0px 0px white
 
 .custom-max
   height: calc(100vh - 4rem)
